// Fix block newsletter display on tablet

--- a/themes/classic/_dev/css/theme.scss
+++ b/themes/classic/_dev/css/theme.scss
@@ -243,6 +243,9 @@
   .dropdown-item {
     padding-left: 0;
   }
+  input[name="submitNewsletter"] {
+    margin-top: $small-space;
+  }
 }
 @include media-breakpoint-down(md) {
   #products .product-miniature,
@@ -267,11 +270,12 @@
   }
   #blockcart-modal .cart-content {
     padding-left: 0;
-    button{
+    button {
       margin-bottom: $small-space;
     }
   }
-  #blockcart-modal .product-name, #product-availability{
+  #blockcart-modal .product-name,
+  #product-availability {
     margin-top: $small-space;
   }
   #search_filters .facet .facet-label {
@@ -284,7 +288,7 @@
   .block-category {
     padding-bottom: 0;
   }
-  input[name="submitNewsletter"]{
-    margin-top: $small-space;
+  .block_newsletter {
+    width: 100%;
   }
 }
